test/expected/explain_vo_exclam_k_b.out
explain virtual bool operator!(S)
                               ^
32: error: member operator "!" must have exactly 0 parameters
